--- a/Assets/MlConfig.yaml
+++ b/Assets/MlConfig.yaml
@@ -36,7 +36,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     checkpoint_interval: 500000
-    max_steps: 55000000
+    max_steps: 50000000
     time_horizon: 64
     summary_freq: 50000
     threaded: false
@@ -65,7 +65,7 @@ checkpoint_settings:
   run_id: ppo
   initialize_from: null
   load_model: false
-  resume: true
+  resume: false
   force: false
   train_model: false
   inference: false
