--- a/results/ppo/configuration.yaml
+++ b/results/ppo/configuration.yaml
@@ -36,7 +36,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     checkpoint_interval: 500000
-    max_steps: 55000000
+    max_steps: 50000000
     time_horizon: 64
     summary_freq: 50000
     threaded: false
@@ -65,8 +65,8 @@ checkpoint_settings:
   run_id: ppo
   initialize_from: null
   load_model: false
-  resume: true
-  force: false
+  resume: false
+  force: true
   train_model: false
   inference: false
   results_dir: results
